Added 'GULP' with new project structure and some tasks(clear, html, scss, img)

--- a/source/index.html
+++ b/source/index.html
@@ -8,20 +8,7 @@
 </head>
 <body>
 
-  <header class="page-header">
-    <a class="page-header__logo" href="#">
-      <img class="pahe-header__logo-image" src="./assets/images/header/header-mob.png" alt="Логотип Барбершоп 'Бородинский'" width="226" height="30">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">Открыть меню</button>
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item">ГЛАВНАЯ</li>
-        <li class="site-list__item">НАШИ РАБОТЫ</li>
-        <li class="site-list__item">ЗАПИСАТЬСЯ</li>
-        <li class="site-list__item">КОНТАКТЫ</li>
-      </ul>
-    </nav>
-  </header>
+@@include("./assets/html/header/header.html")
 
   <main class="page-main">
     <h1 class="visually-hidden">Барбершоп "BORODINSKI"</h1>
