--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,13 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- STYLES -->
+  <link rel="stylesheet" href="assets/css/main.min.css">
 
   <title>BORODINSKI</title>
 </head>
@@ -10,7 +17,7 @@
 
 @@include("./assets/html/header/header.html")
 
-  <main class="page-main">
+  <main class="page-main container">
     <h1 class="visually-hidden">Барбершоп "BORODINSKI"</h1>
 
     <section class="stats">
@@ -150,5 +157,6 @@
       <a class="copyright__link button" href="#">SUPERCELL</a>
     </div>
   </footer>
+  <script src="assets/js/nav-list.js"></script>
 </body>
 </html>
