Amendments index.html (styles and html blocks)

--- a/source/assets/html/footer/footer.html
+++ b/source/assets/html/footer/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer">
-  <div class="container">
+  <div class="footer__wrapper container">
     <div class="footer__contacts contacts">
       <b class="contacts__title">Барбершоп Бородинский</b>
       <p class="contacts__address">г. Санкт-Петербург, ул. Большая Конюшенная 19/8</p>
-      <a class="contacts__phone button" href="tel:">+7 (812) 555-66-66</a>
+      <a class="contacts__phone button footer__btn" href="tel:">+7 (812) 555-66-66</a>
     </div>
     <div class="footer__social social">
       <b class="social__title">Давайте дружить</b>
@@ -21,7 +21,7 @@
     </div>
     <div class="copyright">
       <p class="copyright__text">Разработано:</p>
-      <a class="copyright__link button" href="#">SUPERCELL</a>
+      <a class="copyright__link button footer__btn" href="#">SUPERCELL</a>
     </div>
   </div>
 </footer>
