--- a/source/assets/html/reviews/reviews.html
+++ b/source/assets/html/reviews/reviews.html
@@ -6,19 +6,19 @@
       <button class="reviews__prev" type="button">Предыдущий отзыв</button>
       <ul class="reviews__list slider__list">
         <li class="reviews__item">
-          <p class="reviews__image">
+          <figure class="reviews__image">
             <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
-          </p>
-          <div>
+          </figure>
+          <div class="reviews__inner">
             <cite class="reviews__author">Трэвис Баркер</cite>
             <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
           </div>
         </li>
         <li class="reviews__item">
-          <p class="reviews__image">
+          <figure class="reviews__image">
             <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
-          </p>
-          <div>
+          </figure>
+          <div class="reviews__inner">
             <cite class="reviews__author">Трэвис Баркер</cite>
             <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
           </div>
