Added portfolio page

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
 
+
   <!-- STYLES -->
   <link rel="stylesheet" href="assets/css/main.min.css">
-
   <title>BORODINSKI</title>
+
 </head>
 <body>
   <div class="page-container">
@@ -25,10 +26,10 @@
       <button class="nav__toggle" type="button">Открыть меню</button>
       <ul class="nav__list site-list">
         <li class="site-list__item">
-          <a class="site-list__link" href="#">ГЛАВНАЯ</a>
+          <a class="site-list__link" href="index.html">ГЛАВНАЯ</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link" href="#">НАШИ РАБОТЫ</a>
+          <a class="site-list__link" href="portfolio.html">НАШИ РАБОТЫ</a>
         </li>
         <li class="site-list__item">
           <a class="site-list__link" href="#">ЗАПИСАТЬСЯ</a>
@@ -49,10 +50,10 @@
       <nav class="nav">
         <ul class="nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link site-list__link--active" href="#">ГЛАВНАЯ</a>
+            <a class="site-list__link site-list__link--active" href="index.html">ГЛАВНАЯ</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">НАШИ РАБОТЫ</a>
+            <a class="site-list__link" href="portfolio.html">НАШИ РАБОТЫ</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="#">ЗАПИСАТЬСЯ</a>
@@ -169,6 +170,15 @@
     <div class="reviews__slider slider">
       <button class="reviews__prev" type="button">Предыдущий отзыв</button>
       <ul class="reviews__list slider__list">
+        <li class="reviews__item">
+          <figure class="reviews__image">
+            <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
+          </figure>
+          <div class="reviews__inner">
+            <cite class="reviews__author">Трэвис Баркер</cite>
+            <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+          </div>
+        </li>
         <li class="reviews__item">
           <figure class="reviews__image">
             <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
