--- a/source/assets/html/chunks/header/header.html
+++ b/source/assets/html/chunks/header/header.html
@@ -4,14 +4,14 @@
       <img class="header__logo-image" src="./assets/images/header/header-mob.png" alt="Логотип Барбершоп 'Бородинский'" width="226" height="30">
     </a>
     <nav class="nav nav--mob">
-      <h3 class="nav__title">ГЛАВНАЯ</h3>
+      <h3 class="nav__title">@@navTitle</h3>
       <button class="nav__toggle" type="button">Открыть меню</button>
       <ul class="nav__list site-list">
         <li class="site-list__item">
-          <a class="site-list__link" href="#">ГЛАВНАЯ</a>
+          <a class="site-list__link" href="index.html">ГЛАВНАЯ</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link" href="#">НАШИ РАБОТЫ</a>
+          <a class="site-list__link" href="portfolio.html">НАШИ РАБОТЫ</a>
         </li>
         <li class="site-list__item">
           <a class="site-list__link" href="#">ЗАПИСАТЬСЯ</a>
@@ -32,10 +32,10 @@
       <nav class="nav">
         <ul class="nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link site-list__link--active" href="#">ГЛАВНАЯ</a>
+            <a class="site-list__link site-list__link--active" href="index.html">ГЛАВНАЯ</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">НАШИ РАБОТЫ</a>
+            <a class="site-list__link" href="portfolio.html">НАШИ РАБОТЫ</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="#">ЗАПИСАТЬСЯ</a>
