--- a/source/assets/html/chunks/index/reviews/reviews.html
+++ b/source/assets/html/chunks/index/reviews/reviews.html
@@ -23,6 +23,15 @@
             <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
           </div>
         </li>
+        <li class="reviews__item">
+          <figure class="reviews__image">
+            <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
+          </figure>
+          <div class="reviews__inner">
+            <cite class="reviews__author">Трэвис Баркер</cite>
+            <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+          </div>
+        </li>
       </ul>
       <button class="reviews__next" type="button">Следующий отзыв</button>
       <div class="reviews__toggles slider__toggles">
