--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -32,7 +32,7 @@
           <a class="site-list__link" href="portfolio.html">НАШИ РАБОТЫ</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link" href="#">ЗАПИСАТЬСЯ</a>
+          <a class="site-list__link" href="appointment.html">ЗАПИСАТЬСЯ</a>
         </li>
         <li class="site-list__item">
           <a class="site-list__link" href="#">КОНТАКТЫ</a>
@@ -56,7 +56,7 @@
             <a class="site-list__link" href="portfolio.html">НАШИ РАБОТЫ</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">ЗАПИСАТЬСЯ</a>
+            <a class="site-list__link" href="appointment.html">ЗАПИСАТЬСЯ</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="#">КОНТАКТЫ</a>
