--- a/source/assets/html/chunks/header.html
+++ b/source/assets/html/chunks/header.html
@@ -14,7 +14,7 @@
           <a class="site-list__link" href="portfolio.html">НАШИ РАБОТЫ</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link" href="#">ЗАПИСАТЬСЯ</a>
+          <a class="site-list__link" href="appointment.html">ЗАПИСАТЬСЯ</a>
         </li>
         <li class="site-list__item">
           <a class="site-list__link" href="#">КОНТАКТЫ</a>
@@ -38,7 +38,7 @@
             <a class="site-list__link" href="portfolio.html">НАШИ РАБОТЫ</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">ЗАПИСАТЬСЯ</a>
+            <a class="site-list__link" href="appointment.html">ЗАПИСАТЬСЯ</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="#">КОНТАКТЫ</a>
