--- a/source/assets/html/chunks/advantages.html
+++ b/source/assets/html/chunks/advantages.html
@@ -17,11 +17,12 @@
           <p class="advantages__desc">Наши мастера — профессионалы своего делаи не могут стоить дёшево. К тому же, разве цена не даёт определённый статус?</p>
         </li>
       </ul>
-      <div class="advantages__toggles slider__toggles">
-        <button class="slider__toggle active" type="button">1</button>
-        <button class="slider__toggle" type="button">2</button>
-        <button class="slider__toggle" type="button">3</button>
-      </div>
+<!--       <div class="advantages__toggles slider__toggles">
+        <button class="slider__toggle active" data-slide="1" type="button">1</button>
+        <button class="slider__toggle" data-slide="2" type="button">2</button>
+        <button class="slider__toggle" data-slide="3" type="button">3</button>
+      </div> -->
     </div>
   </div>
+  <div class="triangle"></div>
 </section>
