--- a/source/assets/html/chunks/appointment-form.html
+++ b/source/assets/html/chunks/appointment-form.html
@@ -1,6 +1,9 @@
 <form class="appointment">
   <div class="container">
-    <h2 class="appointment__title section__title">Запись на стрижку</h2>
+    <div class="section-header">
+      <h2 class="appointment__title section-title">Запись на стрижку</h2>
+      <button class="main-link button" type="button">На главную</button>
+    </div>
     <div class="appointment__row appointment__row--1">
       <input class="appointment__input input" name="surname" type="text" placeholder="Фамилия">
       <input class="appointment__input input" name="name" type="text" placeholder="Имя">
@@ -80,7 +83,7 @@
           <p class="appointment__checkbox-text">Отполировать лысину</p>
         </label>
       </div>
-      <button class="button appointment__submit" type="submit">Отправить заявку</button>
+      <button class="appointment__submit button" type="submit">Отправить заявку</button>
     </fieldset>
   </div>
   <div class="triangle"></div>
