--- a/source/assets/html/chunks/news.html
+++ b/source/assets/html/chunks/news.html
@@ -1,6 +1,6 @@
 <section class="news">
   <div class="container">
-    <h2 class="news__title">Новости и акции</h2>
+    <h2 class="news__title section-title">Новости и акции</h2>
     <ul class="news__list">
       <li class="news__item">
         <a class="news__link" href="#">
@@ -8,6 +8,7 @@
             <span class="news__day">29</span>
             <br>
             <span class="news__month">сент</span>
+            <div class="triangle"></div>
           </time>
           <p class="news__text">Нам наконец завезли Ягермайстер! Теперь вы можете пропусить стаканчик во время стрижки.</p>
         </a>
@@ -18,6 +19,7 @@
             <span class="news__day">19</span>
             <br>
             <span class="news__month">сент</span>
+            <div class="triangle"></div>
           </time>
           <p class="news__text">В нашей команде пополнение, Борис «Бритва» Стригунец, обладатель множества титулов и наград пополнил наши стройные ряды. Спешите записаться!</p>
         </a>
