--- a/source/assets/html/chunks/portfolio.html
+++ b/source/assets/html/chunks/portfolio.html
@@ -1,8 +1,8 @@
 <section class="portfolio">
   <div class="container">
-    <header class="portfolio__header">
-      <h2 class="portfolio__title section__title">НАШИ РАБОТЫ</h2>
-      <a class="portfolio__link button" href="index.html">НА ГЛАВНУЮ</a>
+    <header class="portfolio__header section-header">
+      <h2 class="section-title">НАШИ РАБОТЫ</h2>
+      <a class="main-link button" href="index.html">НА ГЛАВНУЮ</a>
     </header>
     <ul class="portfolio__list">
       <li class="portfolio__item-best">
