--- a/source/assets/html/chunks/price.html
+++ b/source/assets/html/chunks/price.html
@@ -1,6 +1,6 @@
 <section class="price">
   <div class="container">
-    <h2 class="price__title section__title">ПРЕЙСКУРАНТ</h2>
+    <h2 class="price__title section-title">ПРЕЙСКУРАНТ</h2>
     <div class="price__wrapper">
       <table class="price__table">
         <tr>
