--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
 
 
   <!-- STYLES -->
@@ -17,40 +18,15 @@
 <body>
   <div class="page-container">
     <header class="header">
-  <div class="header-mob">
-    <a class="header__logo" href="#">
-      <img class="header__logo-image" src="./assets/images/header/header-mob.png" alt="Логотип Барбершоп 'Бородинский'" width="226" height="30">
-    </a>
-    <nav class="nav nav--mob">
-      <h3 class="nav__title">РАБОТЫ</h3>
-      <button class="nav__toggle" type="button">Открыть меню</button>
-      <ul class="nav__list site-list">
-        <li class="site-list__item">
-          <a class="site-list__link" href="index.html">ГЛАВНАЯ</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="portfolio.html">НАШИ РАБОТЫ</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="appointment.html">ЗАПИСАТЬСЯ</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="#">КОНТАКТЫ</a>
-        </li>
-        <ul class="user-list">
-          <li class="user-list__item">
-            <button class="user-list__btn login-icon" type="button">Войти</button>
-          </li>
-        </ul>
-      </ul>
-    </nav>
-  </div>
-  <div class="header-tablet">
+  <a class="header__logo" href="#">Back to main page</a>
+  <nav class="nav">
+    <h3 class="nav__title">РАБОТЫ</h3>
+    <button class="nav__toggle" type="button">Открыть меню</button>
     <div class="container">
-      <nav class="nav">
-        <ul class="nav__list site-list">
+      <ul class="nav__list">
+        <ul class="site-list">
           <li class="site-list__item">
-            <a class="site-list__link site-list__link--active" href="index.html">ГЛАВНАЯ</a>
+            <a class="site-list__link" href="index.html">ГЛАВНАЯ</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="portfolio.html">НАШИ РАБОТЫ</a>
@@ -67,17 +43,17 @@
             <button class="user-list__btn login-icon" type="button">Войти</button>
           </li>
         </ul>
-      </nav>
+      </ul>
     </div>
-  </div>
+  </nav>
 </header>
     <main>
       <h1 class="visually-hidden">Наши работы</h1>
       <section class="portfolio">
   <div class="container">
-    <header class="portfolio__header">
-      <h2 class="portfolio__title section__title">НАШИ РАБОТЫ</h2>
-      <a class="portfolio__link button" href="index.html">НА ГЛАВНУЮ</a>
+    <header class="portfolio__header section-header">
+      <h2 class="section-title">НАШИ РАБОТЫ</h2>
+      <a class="main-link button" href="index.html">НА ГЛАВНУЮ</a>
     </header>
     <ul class="portfolio__list">
       <li class="portfolio__item-best">
@@ -162,7 +138,7 @@
 </section>
       <section class="price">
   <div class="container">
-    <h2 class="price__title section__title">ПРЕЙСКУРАНТ</h2>
+    <h2 class="price__title section-title">ПРЕЙСКУРАНТ</h2>
     <div class="price__wrapper">
       <table class="price__table">
         <tr>
