--- a/source/assets/html/chunks/header.html
+++ b/source/assets/html/chunks/header.html
@@ -1,38 +1,13 @@
 <header class="header">
-  <div class="header-mob">
-    <a class="header__logo" href="#">
-      <img class="header__logo-image" src="./assets/images/header/header-mob.png" alt="Логотип Барбершоп 'Бородинский'" width="226" height="30">
-    </a>
-    <nav class="nav nav--mob">
-      <h3 class="nav__title">@@navTitle</h3>
-      <button class="nav__toggle" type="button">Открыть меню</button>
-      <ul class="nav__list site-list">
-        <li class="site-list__item">
-          <a class="site-list__link" href="index.html">ГЛАВНАЯ</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="portfolio.html">НАШИ РАБОТЫ</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="appointment.html">ЗАПИСАТЬСЯ</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="#">КОНТАКТЫ</a>
-        </li>
-        <ul class="user-list">
-          <li class="user-list__item">
-            <button class="user-list__btn login-icon" type="button">Войти</button>
-          </li>
-        </ul>
-      </ul>
-    </nav>
-  </div>
-  <div class="header-tablet">
+  <a class="header__logo" href="#">Back to main page</a>
+  <nav class="nav">
+    <h3 class="nav__title">@@navTitle</h3>
+    <button class="nav__toggle" type="button">Открыть меню</button>
     <div class="container">
-      <nav class="nav">
-        <ul class="nav__list site-list">
+      <ul class="nav__list">
+        <ul class="site-list">
           <li class="site-list__item">
-            <a class="site-list__link site-list__link--active" href="index.html">ГЛАВНАЯ</a>
+            <a class="site-list__link" href="index.html">ГЛАВНАЯ</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="portfolio.html">НАШИ РАБОТЫ</a>
@@ -49,7 +24,7 @@
             <button class="user-list__btn login-icon" type="button">Войти</button>
           </li>
         </ul>
-      </nav>
+      </ul>
     </div>
-  </div>
+  </nav>
 </header>
