--- a/source/assets/html/chunks/reviews.html
+++ b/source/assets/html/chunks/reviews.html
@@ -1,9 +1,8 @@
 <section class="reviews">
   <div class="container">
-    <h3 class="reviews__title">ОТЗЫВЫ О НАС</h3>
+    <h3 class="reviews__title section-title">ОТЗЫВЫ О НАС</h3>
     <a class="reviews__write button" href="#">ОСТАВИТЬ СВОЙ</a>
     <div class="reviews__slider slider">
-      <button class="reviews__prev" type="button">Предыдущий отзыв</button>
       <ul class="reviews__list slider__list">
         <li class="reviews__item">
           <figure class="reviews__image">
@@ -33,12 +32,7 @@
           </div>
         </li>
       </ul>
-      <button class="reviews__next" type="button">Следующий отзыв</button>
-      <div class="reviews__toggles slider__toggles">
-        <button class="slider__toggle active" type="button">1</button>
-        <button class="slider__toggle" type="button">2</button>
-        <button class="slider__toggle" type="button">3</button>
-      </div>
     </div>
   </div>
+  <div class="triangle"></div>
 </section>
