--- a/source/index.html
+++ b/source/index.html
@@ -22,5 +22,10 @@
 
   </div>
   <script src="assets/js/nav-list.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="assets/js/adv-slider.js"></script>
+  <script src="assets/js/rev-slider.js"></script>
 </body>
 </html>
