--- a/public/appointment.html
+++ b/public/appointment.html
@@ -11,6 +11,7 @@
 
 
   <!-- STYLES -->
+  <link rel="stylesheet" href="assets/css/slick.css">
   <link rel="stylesheet" href="assets/css/main.min.css">
   <title>ЗАПИСАТЬСЯ</title>
 
@@ -18,7 +19,7 @@
 <body>
   <div class="page-container">
     <header class="header">
-  <a class="header__logo" href="#">Back to main page</a>
+  <a class="header__logo" href="index.html">Back to main page</a>
   <nav class="nav">
     <h3 class="nav__title">ЗАПИСАТЬСЯ</h3>
     <button class="nav__toggle" type="button">Открыть меню</button>
@@ -50,12 +51,11 @@
 
   <main class="page-main">
     <h1 class="visually-hidden">Запись на стрижку</h1>
-
     <form class="appointment">
   <div class="container">
     <div class="section-header">
       <h2 class="appointment__title section-title">Запись на стрижку</h2>
-      <button class="main-link button" type="button">На главную</button>
+      <a class="main-link button" href="index.html">На главную</a>
     </div>
     <div class="appointment__row appointment__row--1">
       <input class="appointment__input input" name="surname" type="text" placeholder="Фамилия">
