--- a/source/assets/html/chunks/appointment.html
+++ b/source/assets/html/chunks/appointment.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="section-header">
       <h2 class="appointment__title section-title">Запись на стрижку</h2>
-      <button class="main-link button" type="button">На главную</button>
+      <a class="main-link button" href="index.html">На главную</a>
     </div>
     <div class="appointment__row appointment__row--1">
       <input class="appointment__input input" name="surname" type="text" placeholder="Фамилия">
