--- a/source/assets/html/chunks/head.html
+++ b/source/assets/html/chunks/head.html
@@ -8,5 +8,6 @@
 
 
   <!-- STYLES -->
+  <link rel="stylesheet" href="assets/css/slick.css">
   <link rel="stylesheet" href="assets/css/main.min.css">
   <title>@@title</title>
