--- a/source/assets/html/chunks/header.html
+++ b/source/assets/html/chunks/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <a class="header__logo" href="#">Back to main page</a>
+  <a class="header__logo" href="index.html">Back to main page</a>
   <nav class="nav">
     <h3 class="nav__title">@@navTitle</h3>
     <button class="nav__toggle" type="button">Открыть меню</button>
