--- a/source/index.html
+++ b/source/index.html
@@ -19,12 +19,11 @@
     @@include("./assets/html/chunks/reviews.html")
     @@include("./assets/html/chunks/footer.html")
   </main>
-
   </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="assets/js/slick.js"></script>
   <script src="assets/js/nav-list.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="assets/js/adv-slider.js"></script>
   <script src="assets/js/rev-slider.js"></script>
 </body>
