--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 
 
   <!-- STYLES -->
+  <link rel="stylesheet" href="assets/css/slick.css">
   <link rel="stylesheet" href="assets/css/main.min.css">
   <title>BORODINSKI</title>
 
@@ -18,7 +19,7 @@
 <body>
   <div class="page-container">
     <header class="header">
-  <a class="header__logo" href="#">Back to main page</a>
+  <a class="header__logo" href="index.html">Back to main page</a>
   <nav class="nav">
     <h3 class="nav__title">ГЛАВНАЯ</h3>
     <button class="nav__toggle" type="button">Открыть меню</button>
@@ -149,30 +150,36 @@
     <div class="reviews__slider slider">
       <ul class="reviews__list slider__list">
         <li class="reviews__item">
-          <figure class="reviews__image">
-            <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
-          </figure>
-          <div class="reviews__inner">
-            <cite class="reviews__author">Трэвис Баркер</cite>
-            <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+          <div class="reviews__item-inner">
+            <figure class="reviews__image">
+              <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
+            </figure>
+            <div class="reviews__inner">
+              <cite class="reviews__author">Трэвис Баркер</cite>
+              <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+            </div>
           </div>
         </li>
         <li class="reviews__item">
-          <figure class="reviews__image">
-            <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
-          </figure>
-          <div class="reviews__inner">
-            <cite class="reviews__author">Трэвис Баркер</cite>
-            <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+          <div class="reviews__item-inner">
+            <figure class="reviews__image">
+              <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
+            </figure>
+            <div class="reviews__inner">
+              <cite class="reviews__author">Трэвис Баркер</cite>
+              <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+            </div>
           </div>
         </li>
         <li class="reviews__item">
-          <figure class="reviews__image">
-            <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
-          </figure>
-          <div class="reviews__inner">
-            <cite class="reviews__author">Трэвис Баркер</cite>
-            <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+          <div class="reviews__item-inner">
+            <figure class="reviews__image">
+              <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
+            </figure>
+            <div class="reviews__inner">
+              <cite class="reviews__author">Трэвис Баркер</cite>
+              <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+            </div>
           </div>
         </li>
       </ul>
@@ -208,12 +215,11 @@
   </div>
 </footer>
   </main>
-
   </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="assets/js/slick.js"></script>
   <script src="assets/js/nav-list.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="assets/js/adv-slider.js"></script>
   <script src="assets/js/rev-slider.js"></script>
 </body>
