--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -11,6 +11,7 @@
 
 
   <!-- STYLES -->
+  <link rel="stylesheet" href="assets/css/slick.css">
   <link rel="stylesheet" href="assets/css/main.min.css">
   <title>Наши работы</title>
 
@@ -18,7 +19,7 @@
 <body>
   <div class="page-container">
     <header class="header">
-  <a class="header__logo" href="#">Back to main page</a>
+  <a class="header__logo" href="index.html">Back to main page</a>
   <nav class="nav">
     <h3 class="nav__title">РАБОТЫ</h3>
     <button class="nav__toggle" type="button">Открыть меню</button>
