--- a/source/assets/html/chunks/reviews.html
+++ b/source/assets/html/chunks/reviews.html
@@ -5,30 +5,36 @@
     <div class="reviews__slider slider">
       <ul class="reviews__list slider__list">
         <li class="reviews__item">
-          <figure class="reviews__image">
-            <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
-          </figure>
-          <div class="reviews__inner">
-            <cite class="reviews__author">Трэвис Баркер</cite>
-            <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+          <div class="reviews__item-inner">
+            <figure class="reviews__image">
+              <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
+            </figure>
+            <div class="reviews__inner">
+              <cite class="reviews__author">Трэвис Баркер</cite>
+              <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+            </div>
           </div>
         </li>
         <li class="reviews__item">
-          <figure class="reviews__image">
-            <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
-          </figure>
-          <div class="reviews__inner">
-            <cite class="reviews__author">Трэвис Баркер</cite>
-            <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+          <div class="reviews__item-inner">
+            <figure class="reviews__image">
+              <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
+            </figure>
+            <div class="reviews__inner">
+              <cite class="reviews__author">Трэвис Баркер</cite>
+              <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+            </div>
           </div>
         </li>
         <li class="reviews__item">
-          <figure class="reviews__image">
-            <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
-          </figure>
-          <div class="reviews__inner">
-            <cite class="reviews__author">Трэвис Баркер</cite>
-            <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+          <div class="reviews__item-inner">
+            <figure class="reviews__image">
+              <img class="reviews__author-image" src="assets/images/reviews/author-imgs/travis.png" alt="Фото Трэвиса Баркера" width="50" height="49">
+            </figure>
+            <div class="reviews__inner">
+              <cite class="reviews__author">Трэвис Баркер</cite>
+              <p class="reviews__desc">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+            </div>
           </div>
         </li>
       </ul>
